Changes for 4.0.0alpha5

New features:
..F....... [ZBXNEXT-4340] added kiosk mode for dashboard (ashubin)

Bug fixes:
..F....... [ZBX-13537] fixed 'Inaccessible user' in Dashboard System status widgets acknowledgement popup (agriscenko)
....I..... [ZBX-13472] fixed description of "Server" and "ServerActive" configuration options (Sasha)
........S. [ZBX-13455] added frontend error message when templates cannot be linked to LLD host (viktors)
..F....... [ZBX-13538] fixed example configuration for Elasticsearch (nikita)
..F....... [ZBX-13434] fixed incorrect trigger dependencies being set after copying triggers to multiple hosts; thanks to Kotaro Miyashita for the patch (Ivo)
..F....... [ZBX-13513] fixed input maxlength for users media of type script (nikita)
...G...PS. [ZBX-13523] fixed error message for empty TCP response in case agent dropped connection because of access permissions (vso)
..F....... [ZBX-12883] fixed incorrect ordering the list of triggers after saving a map (agriscenko)
..F....... [ZBXNEXT-4150] fixed URL display in hint box and focus styles for radio buttons (ashubin, nikita)
..F....... [ZBX-12940] fixed content does not fit dialog window (agriscenko)
..F....... [ZBX-13342] fixed order by query in frontend Maintenance tab (agriscenko)
..F....... [ZBX-13401] fixed successful items mass update with invalid update interval (agriscenko)
A......... [ZBX-6167] fixed partial updating in maintenance.update (ashubin)
...G...... [ZBX-13062] banned using of mutex in threads of metrics collection (MVekslers)
........S. [ZBX-13236] fixed error message of function parameters parse (MVekslers)
....I..... [ZBX-10433] removed inaccurate configuration default values (viktors)
....I..... [ZBX-13398] fixed configure script for Debian GNU/Linux "buster" and "sid" to work with PostgreSQL (viktors)

--------------------------------------------------------------------------------
Changes for 4.0.0alpha4

New features: